--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = engines/qus
 	url = https://github.com/TUL-Dev/QuantUS-Plugins.git
 	branch = gui_refactor_dev
+[submodule "engines/ceus"]
+	path = engines/ceus
+	url = https://github.com/TUL-Dev/QuantUS-Plugins-CEUS.git
